--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,8 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>卡羅購物</title>
+  {{!-- font awesome --}}
+  <script src="https://kit.fontawesome.com/ccfd93e9a7.js" crossorigin="anonymous"></script>
+  {{!-- bootstrap --}}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-  {{{body}}}
+  {{!-- navbar --}}
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/products">
+        <i class="fab fa-shopify fa-lg"></i>
+        <strong style="font-size:28px;">卡羅購物</strong>
+      </a>
+      <a class="navbar-brand" href="/cart">
+        <i class="fas fa-shopping-cart fa-lg"></i>
+      </a>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    {{{body}}}
+  </div>
+  {{!-- bootstrap --}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
