--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,9 @@
       <a class="navbar-brand" href="/cart">
         <i class="fas fa-shopping-cart fa-lg"></i>
       </a>
+      <a class="navbar-brand" href="/orders">
+        <i class="fas fa-list-alt fa-lg"></i>
+      </a>
     </div>
   </nav>
 
