modify getOrders route for orders data

--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -10,7 +10,7 @@
         </tr>
       </thead>
       <tbody>
-        {{#each this}}
+        {{#each this.orderProducts}}
         <tr>
           <td>{{this.name}}</td>
           <td>{{this.OrderItem.quantity}}</td>
