--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-md-9">
-    <div class="row">
-      {{#each products.rows}}
+    <div class="row mt-4">
+      {{#each products}}
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
           <img class="bd-placeholder-img card-img-top" width="100%" height="225" src={{this.image}}></img>
           <div class="card-body">
             <p class="card-text">
-              <h4><a href="/products/{{this.id}}">{{this.id}} {{this.name}}</a></h4>
-              <span>{{this.description}}</span>
+              <h4 style="height:80px"><a href="/products/{{this.id}}">{{this.name}}</a></h4>
+              <p style="height:80px"><span style="height:150px">{{this.description}}</span></p>
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <small class="text-muted">$ {{this.price}}</small>
@@ -23,48 +23,61 @@
         </div>
       </div>
       {{/each}}
+      {{!-- paginator --}}
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item"><a class="page-link" href="/products?page={{prev}}">Previous</a></li>
+          {{#each totalPage}}
+          {{#equal this ../page}}
+          <li class="page-item active"><a class="page-link" href="/products?page={{this}}">{{this}}</a></li>
+          {{else}}
+          <li class="page-item"><a class="page-link" href="/products?page={{this}}">{{this}}</a></li>
+          {{/equal}}
+          {{/each}}
+          <li class="page-item"><a class="page-link" href="/products?page={{next}}">Next</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
-  <nav class="col-md-3 d-none d-md-block bg-light sidebar">
-  <div class="sidebar-sticky">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-        {{#each cart.cartProducts}}
-        <div class="row no-gutters">
-          <div class="col-md-4" style="display: flex;align-items: center;">
-            <img src="{{this.image}}" class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">{{this.name}}</h5>
-              <p>${{this.price}}</p>
-              <div class="btn-group">
-                <form action="/cartItem/{{this.CartItem.id}}/add" method="POST">
-                  <button type="submit" class="btn btn-sm btn-outline-secondary">+</button>
-                </form>
-                <span style="margin: 0 20px;">{{this.CartItem.quantity}}</span>
-                <form action="/cartItem/{{this.CartItem.id}}/sub" method="POST">
-                  <button type="submit" class="btn btn-sm btn-outline-secondary">-</button>
-                </form>
+  <nav class="col-md-3 d-none d-md-block bg-light sidebar mt-4">
+    <div class="sidebar-sticky">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          {{#each cart.cartProducts}}
+          <div class="row no-gutters">
+            <div class="col-md-4" style="display: flex;align-items: center;">
+              <img src="{{this.image}}" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">{{this.name}}</h5>
+                <p>${{this.price}}</p>
+                <div class="btn-group">
+                  <form action="/cartItem/{{this.CartItem.id}}/add" method="POST">
+                    <button type="submit" class="btn btn-sm btn-outline-secondary">+</button>
+                  </form>
+                  <span style="margin: 0 20px;">{{this.CartItem.quantity}}</span>
+                  <form action="/cartItem/{{this.CartItem.id}}/sub" method="POST">
+                    <button type="submit" class="btn btn-sm btn-outline-secondary">-</button>
+                  </form>
 
-                <form action="/cartItem/{{this.CartItem.id}}?_method=DELETE" method="POST">
-                  <button type="submit" class="btn btn-link">
-                    <i class="fas fa-trash"></i>
-                  </button>
-                </form>
+                  <form action="/cartItem/{{this.CartItem.id}}?_method=DELETE" method="POST">
+                    <button type="submit" class="btn btn-link">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        {{/each}}
+          {{/each}}
+        </li>
+      </ul>
+      <hr>
+      <li class="list-group-item">
+        Total: ${{totalPrice}}
+        <a href="/cart"><button class="btn btn-primary">Go to Cart</button></a>
       </li>
-    </ul>
-    <hr>
-    <li class="list-group-item">
-      Total: ${{totalPrice}}
-      <a href="/cart"><button class="btn btn-primary">Go to Cart</button></a>
-    </li>
-
     </div>
   </nav>
 </div>
