modify postProduct route for image upload by multer and imgur

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -9,7 +9,7 @@
       </ul>
     </div>
     <div class="col-md-9">
-      <form action="/admin/products" method="POST">
+      <form action="/admin/products" method="POST" enctype="multipart/form-data">
       <h5>新增商品</h5>
         <div class="input-group mb-3">
           <span class="input-group-text" id="name">Name</span>
