--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h2 class="text-center mt-3">後台Login</h2>
-      {{!-- {{> message}} --}}
+      {{> message}}
       <form action="/admin/login" method="POST">
         <div class="form-group mb-3">
           <label for="email">Email</label>
