add logout route for admin

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,12 +19,13 @@
         <i class="fab fa-shopify fa-lg"></i>
         <strong style="font-size:28px;">卡羅購物</strong>
       </a>
-      <a class="navbar-brand" href="/cart">
+      <a href="/admin/logout" class="btn btn-outline-light">Logout</a>
+      {{!-- <a class="navbar-brand" href="/cart">
         <i class="fas fa-shopping-cart fa-lg"></i>
       </a>
       <a class="navbar-brand" href="/orders">
         <i class="fas fa-list-alt fa-lg"></i>
-      </a>
+      </a> --}}
     </div>
   </nav>
 
