--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,10 +15,17 @@
   {{!-- navbar --}}
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/products">
-        <i class="fab fa-shopify fa-lg"></i>
-        <strong style="font-size:28px;">卡羅購物</strong>
-      </a>
+      {{#if isAuthenticated}}
+      {{#equal user.role 'user'}}
+      <a class="navbar-brand" href="/products"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></a>
+      {{/equal}}
+      {{#equal user.role 'admin'}}
+      <a class="navbar-brand" href="/admin/products"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></a>
+      {{/equal}}
+      {{else}}
+      <span class="navbar-brand mb-0 h1"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></span>
+      {{/if}}
+
       {{#equal user.role 'user'}}
       <a href="/users/logout" class="btn btn-outline-light">Logout</a>
       {{/equal}}
