--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -11,39 +11,39 @@
       {{> message}}
       {{#if front}}
       <form action="/users/login" method="POST">
-      {{else}}
-      <form action="/admin/login" method="POST">
-      {{/if}}
-        <div class="form-group mb-3">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" class="form-control" placeholder="enter Email" value="{{ email }}"
-            required>
+        {{else}}
+        <form action="/admin/login" method="POST">
+          {{/if}}
+          <div class="form-group mb-3">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" class="form-control" placeholder="enter Email"
+              value="{{ email }}" required>
+          </div>
+          <div class="form-group mb-3">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control" placeholder="enter Password"
+              required>
+          </div>
+          <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
+        {{#if front}}
+        <div class="d-flex justify-content-between">
+          <p class="lead mt-3">
+            尚未註冊?<a href="/users/register">前往註冊</a>
+          </p>
+          <p class="lead mt-3">
+            <a href="/admin/login">後台登入</a>
+          </p>
         </div>
-        <div class="form-group mb-3">
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" class="form-control" placeholder="enter Password"
-            required>
+        {{else}}
+        <div class="d-flex justify-content-end">
+          <p class="lead mt-3">
+            <a href="/users/login">前台登入</a>
+          </p>
         </div>
-        <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-      </form>
-      {{#if front}}
-      <div class="d-flex justify-content-between">
-        <p class="lead mt-3">
-          尚未註冊?<a href="/users/register">前往註冊</a>
-        </p>
-        <p class="lead mt-3">
-          <a href="/admin/login">後台登入</a>
-        </p>
-      </div>
-      {{else}}
-      <div class="d-flex justify-content-end">
-        <p class="lead mt-3">
-          <a href="/users/login">前台登入</a>
-        </p>
-      </div>
-      {{/if}}
+        {{/if}}
     </div>
   </div>
 </div>
