--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,31 +15,87 @@
   {{!-- navbar --}}
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      {{#if isAuthenticated}}
-      {{#equal user.role 'user'}}
-      <a class="navbar-brand" href="/products"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></a>
-      {{/equal}}
       {{#equal user.role 'admin'}}
-      <a class="navbar-brand" href="/admin/products"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></a>
-      {{/equal}}
-      {{else}}
-      <span class="navbar-brand mb-0 h1"><i class="fab fa-shopify fa-lg"></i><strong style="font-size:28px;">卡羅購物</strong></span>
-      {{/if}}
-
-      {{#equal user.role 'user'}}
-      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
-      {{/equal}}
-      {{#equal user.role 'admin'}}
+      <a class="navbar-brand" href="/admin/products">
+        <i class="fab fa-shopify fa-lg"></i>
+        <strong style="font-size:28px;">卡羅購物</strong>
+      </a>
       <a href="/admin/logout" class="btn btn-outline-light">Logout</a>
       {{/equal}}
-      {{!-- <a class="navbar-brand" href="/cart">
-        <i class="fas fa-shopping-cart fa-lg"></i>
+
+      {{#equal user.role 'user'}}
+      <a class="navbar-brand" href="/products">
+        <i class="fab fa-shopify fa-lg"></i>
+        <strong style="font-size:28px;">卡羅購物</strong>
       </a>
-      <a class="navbar-brand" href="/orders">
-        <i class="fas fa-list-alt fa-lg"></i>
-      </a> --}}
+      <div class="d-flex">
+        <a class="navbar-brand" href="/orders">
+          <i class="fas fa-list-alt fa-lg"></i>
+        </a>
+        <a class="navbar-brand" href="/cart">
+          <i class="fas fa-shopping-cart fa-lg"></i>
+        </a>
+        <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      </div>
+      {{/equal}}
+
+      {{#if user}}
+      {{else}}
+      <a class="navbar-brand" href="/products">
+        <i class="fab fa-shopify fa-lg"></i>
+        <strong style="font-size:28px;">卡羅購物</strong>
+      </a>
+      <div class="d-flex">
+        <a class="navbar-brand" href="/cart">
+          <i class="fas fa-shopping-cart fa-lg"></i>
+        </a>
+        {{!-- <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#login">
+          Login
+        </button> --}}
+        <a href="/users/login" class="btn btn-outline-info">Login</a>
+      </div>
+      {{/if}}
     </div>
   </nav>
+
+  <!-- Modal -->
+  {{!-- <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row mt-2">
+            <div class="col-md-6 m-auto">
+              <h2 class="text-center mt-3 mb-4">前台Login</h2>
+              {{> message}}
+              <form action="/users/login" method="POST">
+                <div class="form-group mb-3">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" id="email" class="form-control" placeholder="enter Email"
+                    value="{{ email }}" required>
+                </div>
+                <div class="form-group mb-3">
+                  <label for="password">Password</label>
+                  <input type="password" name="password" id="password" class="form-control" placeholder="enter Password"
+                    required>
+                </div>
+                <div class="d-grid gap-2">
+                  <button type="submit" class="btn btn-primary">Login</button>
+                </div>
+              </form>             
+              <div class="d-flex justify-content-between">
+                <p class="lead mt-3">
+                  尚未註冊?<a href="/users/register">前往註冊</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> --}}
 
   <div class="container-fluid">
     {{{body}}}
