--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,10 @@
         <i class="fab fa-shopify fa-lg"></i>
         <strong style="font-size:28px;">卡羅購物</strong>
       </a>
-      <a href="/admin/logout" class="btn btn-outline-light">Logout</a>
+      <div class="d-flex">
+        <a href="/admin/logout" class="btn btn-outline-light">Logout</a>
+        <span style="color:white;font-size: 20px;margin-left:10px;margin-top:5px;">{{user.email}}</span>
+      </div>
       {{/equal}}
 
       {{#equal user.role 'user'}}
@@ -36,6 +39,7 @@
           <i class="fas fa-shopping-cart fa-lg"></i>
         </a>
         <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+        <span style="color:white;font-size: 20px;margin-left:10px;margin-top:5px;">{{user.email}}</span>
       </div>
       {{/equal}}
 
