--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -43,7 +43,7 @@
       </div>
       {{/equal}}
 
-      {{#if user}}
+      {{#if isAuthenticated}}
       {{else}}
       <a class="navbar-brand" href="/products">
         <i class="fab fa-shopify fa-lg"></i>
