--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -63,12 +63,14 @@
       {{/equal}}  
     </div>
   </div>
-
-
-
-
-
 </div>
 
 <hr />
 {{/each}}
+
+<script>
+  const token = localStorage.getItem('token')
+  if (token) {
+    req.headers['authorization'] = `Bearer ${token}`
+  }
+</script>
