add google login feature by passport

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -29,6 +29,9 @@
         <div class="d-grid gap-2">
           <button type="submit" class="btn btn-info">Register</button>
         </div>
+        <div class="d-grid gap-2 mt-2">
+          <a href="/users/google" class="btn btn-success">Google Login</a>
+        </div>
       </form>
       <p class="lead mt-3">已註冊? <a href="/users/login">前往登入</a></p>
     </div>
