--- a/views/products.hbs
+++ b/views/products.hbs
@@ -80,9 +80,7 @@
       <li class="list-group-item">
         Total: ${{#if totalPrice}}{{totalPrice}}{{/if}}
       </li>
-      <div class="d-grid gap-2 mt-3">
-        <a href="/cart" class="btn btn-primary">Go to Cart</a>
-      </div>
+      <a href="/cart" class="btn btn-primary btn-block mt-3">Go to Cart</a>
     </div>
   </nav>
 </div>
