--- a/views/register.hbs
+++ b/views/register.hbs
@@ -26,12 +26,8 @@
           <input type="password" name="checkPassword" id="checkPassword" class="form-control"
             placeholder="check Password" required>
         </div>
-        <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-info">Register</button>
-        </div>
-        <div class="d-grid gap-2 mt-2">
-          <a href="/users/google" class="btn btn-success">Google Login</a>
-        </div>
+        <button type="submit" class="btn btn-info btn-block">Register</button>
+        <a href="/users/google" class="btn btn-success btn-block mt-2">Google Login</a>
       </form>
       <p class="lead mt-3">已註冊? <a href="/users/login">前往登入</a></p>
     </div>
