--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -19,7 +19,9 @@
     <use xlink:href="#check-circle-fill" />
   </svg>
   {{success_msg}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 {{/if}}
 
@@ -29,7 +31,9 @@
     <use xlink:href="#exclamation-triangle-fill" />
   </svg>
   {{warning_msg}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 {{/if}}
 
@@ -39,6 +43,8 @@
     <use xlink:href="#exclamation-triangle-fill" />
   </svg>
   {{danger_msg}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 {{/if}}
