--- a/views/products.hbs
+++ b/views/products.hbs
@@ -25,8 +25,8 @@
       </div>
       {{/each}}
       {{!-- paginator --}}
-      <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
+      <nav aria-label="Page navigation example" class="mx-auto">
+        <ul class="pagination">
           <li class="page-item"><a class="page-link" href="/products?page={{prev}}">Previous</a></li>
           {{#each totalPage}}
           {{#equal this ../page}}
