--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -48,6 +48,7 @@
           <th scope="col">Id</th>
           <th scope="col">Name</th>
           <th scope="col">Price</th>
+          <th scope="col">Inventory</th>
           <th scope="col">Operate</th>
         </tr>
       </thead>
@@ -57,8 +58,9 @@
           <th scope="row">{{this.id}}</th>
           <td>{{this.name}}</td>
           <td>{{this.price}}</td>
+          <td>{{this.inventory}}</td>
           <td>
-            <a href="/admin/products/{{this.id}}" class="btn btn-info">詳細內容</a>
+            {{!-- <a href="/admin/products/{{this.id}}" class="btn btn-info">詳細內容</a> --}}
             <a href="/admin/products/{{this.id}}" class="btn btn-success">編輯</a>
             <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST" class="d-inline">
               <button type="submit" class="btn btn-danger" onclick="return confirmDelete()">刪除</button>
