--- a/views/products.hbs
+++ b/views/products.hbs
@@ -8,11 +8,12 @@
           <img class="bd-placeholder-img card-img-top" width="100%" height="225" src={{this.image}}></img>
           <div class="card-body">
             <p class="card-text">
-              <h4 style="height:80px"><a href="/products/{{this.id}}">{{this.name}}</a></h4>
-              <p style="height:80px"><span style="height:150px">{{this.description}}</span></p>
+              <h4 style="height:50px"><a href="/products/{{this.id}}">{{this.name}}</a></h4>
+              <p style="height:50px"><span>{{this.description}}</span></p>
+              <p><span style="color:deeppink;">還剩下{{this.inventory}}件</span></p>
             </p>
             <div class="d-flex justify-content-between align-items-center">
-              <small class="text-muted">$ {{this.price}}</small>
+              <span class="text-muted">$ {{this.price}}</span>
               <div class="btn-group">
                 <form action="/cart" method="POST">
                   <input type="hidden" name="productId" value="{{this.id}}">
