modify products & cart page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
   </head>
   <body>
     {{!-- navbar --}}
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-success">
       <div class="container-fluid">
         {{#equal user.role 'admin'}}
         <a class="navbar-brand" href="/admin/products">
