--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -17,7 +17,7 @@
 
 <div class="mt-5">
   {{>message}}
-  <div class="d-flex justify-content-center mb-3">
+  <div class="d-flex justify-content-center mt-5 mb-3">
     <div>
       <span class="step step-now">Step1</span>
       <div class="mt-3 ml-2">購物車</div>
@@ -30,7 +30,7 @@
     <div class="line"></div>
     <div>
       <span class="step mb-3">Step3</span>
-      <div class="mt-3 mr-3">訂單確認</div>
+      <div class="mt-3 mr-3">成立訂單</div>
       <div class="ml-2">&付款</div>
     </div>
   </div>
@@ -91,33 +91,9 @@
           <h2>$ {{totalPrice}}</h2>
         </td>
         <td>
-          <a href="/cart/orderdata" class="btn btn-outline-success">下一步 : 填寫資料</a>
+          <a href="/order/data" class="btn btn-outline-success">下一步 : 填寫資料</a>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
-
-{{!-- <div class="row">
-  <div class="col-md-4">
-    <form action="/orders" method="POST">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone</label>
-        <input type="text" class="form-control" id="phone" placeholder="Enter phone" name="phone">
-      </div>
-      <div class="form-group">
-        <label for="address">Address</label>
-        <input type="text" class="form-control" id="address" placeholder="Enter address" name="address">
-      </div>
-      <input type="hidden" name="cartId" value="{{cart.id}}">
-      <input type="hidden" name="amount" value="{{totalPrice}}">
-      <input type="hidden" name="shipping_status" value="0">
-      <input type="hidden" name="payment_status" value="0">
-      <button type="submit" class="btn btn-primary mt-3">送出訂單</button>
-    </form>
-  </div>
-</div> --}}
