--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,7 +31,7 @@
           <strong style="font-size:28px;">卡羅購物</strong>
         </a>
         <div class="d-flex">
-          <a class="navbar-brand" href="/orders">
+          <a class="navbar-brand" href="/order">
             <i class="fas fa-list-alt fa-lg"></i>
           </a>
           <a class="navbar-brand" href="/cart">
