--- a/views/orderData.hbs
+++ b/views/orderData.hbs
@@ -32,7 +32,7 @@
     <div class="line"></div>
     <div>
       <span class="step mb-3">Step3</span>
-      <div class="mt-3 mr-3">訂單確認</div>
+      <div class="mt-3 mr-3">成立訂單</div>
       <div class="ml-2">&付款</div>
     </div>
   </div>
@@ -40,7 +40,7 @@
 
 <div class="row">
   <div class="col-md-4 m-auto">
-    <form action="/orders" method="POST">
+    <form action="/order/data" method="POST">
       <div class="form-group">
         <label for="name">姓名</label>
         <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
@@ -53,11 +53,13 @@
         <label for="address">收件地址</label>
         <input type="text" class="form-control" id="address" placeholder="Enter address" name="address">
       </div>
-      <input type="hidden" name="cartId" value="{{cart.id}}">
-      <input type="hidden" name="amount" value="{{totalPrice}}">
+      <input type="hidden" name="cartId" value="{{cartId}}">
+      <input type="hidden" name="amount" value="{{amount}}">
       <input type="hidden" name="shipping_status" value="0">
       <input type="hidden" name="payment_status" value="0">
-      <button type="submit" class="btn btn-primary mt-3">送出訂單</button>
+      <div class="d-flex justify-content-end">
+        <button type="submit" class="btn btn-outline-success mt-3">下一步 : 成立訂單&付款</button>
+      </div>
     </form>
   </div>
 </div>
