--- a/views/order.hbs
+++ b/views/order.hbs
@@ -27,7 +27,7 @@
 
 <div class="mt-5 mx-5">
   {{>message}}
-  <div class="d-flex justify-content-center mb-3">
+  <div class="d-flex justify-content-center mt-5 mb-3">
     <div>
       <span class="step">Step1</span>
       <div class="mt-3 ml-2">購物車</div>
@@ -45,7 +45,7 @@
     </div>
   </div>
   {{!-- order information --}}
-  <ul class="list-group">
+  <ul class="list-group mb-3">
     <li class="list-group-item bg-light text-center">
       {{#if paidOrder}}
       <h3 class="font-weight-bold">訂單付款成功 Email 已寄出給您!</h3>
@@ -56,8 +56,13 @@
     </li>
     <li class="list-group-item">
       <h5 class="font-weight-bold">訂單資訊</h5>
+      <div>訂單編號: {{order.id}}</div>
       <div>下單時間: {{order.createdAt}}</div>
-      <div>訂單狀態: {{order.shipping_status}}</div>
+      <div>訂單狀態: 
+      {{#equal order.shipping_status '1'}}已出貨{{/equal}}
+      {{#equal order.shipping_status '0'}}未出貨{{/equal}}
+      {{#equal order.shipping_status '-1'}}已取消{{/equal}}
+      </div>
     </li>
     <li class="list-group-item">
       <h5 class="font-weight-bold">顧客資訊</h5>
@@ -72,25 +77,33 @@
       <div>地址: {{order.address}}</div>
     </li>
     <li class="list-group-item">
-      <h5 class="font-weight-bold">付款資訊</h5>
-      <div>付款金額: {{order.amount}}</div>
-      <div>付款狀態: {{order.payment_status}}</div>
+      <div class="d-flex justify-content-between">
+        <div class="info">
+          <h5 class="font-weight-bold">付款資訊</h5>
+          <div>付款金額: {{order.amount}}</div>
+          <div>付款狀態:
+            {{#equal order.payment_status '1'}}已付款{{/equal}}
+            {{#equal order.payment_status '0'}}未付款{{/equal}}
+          </div>
+        </div>
+        {{#if paidOrder}}
+        {{else}}
+        <form name="Newebpay" action="{{tradeData.PayGateWay}}" method="POST" class="d-inline">
+          <button type="submit" class="btn btn-outline-success">前往付款</button>
+          {{!-- MerchantID: --}}
+          <input type="hidden" name="MerchantID" value="{{tradeData.MerchantID}}"><br>
+          {{!-- TradeInfo: --}}
+          <input type="hidden" name="TradeInfo" value="{{tradeData.TradeInfo}}"><br>
+          {{!-- TradeSha: --}}
+          <input type="hidden" name="TradeSha" value="{{tradeData.TradeSha}}"><br>
+          {{!-- Version: --}}
+          <input type="hidden" name="Version" value="{{tradeData.Version}}"><br>
+        </form>
+        {{/if}}
+      </div>
     </li>
   </ul>
-  {{#if paidOrder}}
-  {{else}}
-  <div class="d-flex justify-content-end mt-3 mb-5">
-    <form name="Newebpay" action="{{tradeData.PayGateWay}}" method="POST">
-      <button type="submit" class="btn btn-outline-success">前往付款</button>
-      {{!-- MerchantID: --}}
-      <input type="hidden" name="MerchantID" value="{{tradeData.MerchantID}}"><br>
-      {{!-- TradeInfo: --}}
-      <input type="hidden" name="TradeInfo" value="{{tradeData.TradeInfo}}"><br>
-      {{!-- TradeSha: --}}
-      <input type="hidden" name="TradeSha" value="{{tradeData.TradeSha}}"><br>
-      {{!-- Version: --}}
-      <input type="hidden" name="Version" value="{{tradeData.Version}}"><br>
-    </form>
+  <div class="d-flex justify-content-end mb-5">
+    <a href="/order" class="btn btn-outline-dark">回到訂單頁面</a>
   </div>
-  {{/if}}
 </div>
